# CoreTypes

./: .clang-format  CMakeLists.txt  run.py
Private/: Numbers.cpp
Public/CoreTypes/: Int32.h  Numbers.h
Source/: CMakeLists.txt
Source/Main/: CMakeLists.txt
Source/Main/Private/: main.cpp
Source/Types/: CMakeLists.txt
Source/Types/Public/CoreTypes/Types/: Int32.h
